--- a/css-zen-garden-abraao-lucas/index.html
+++ b/css-zen-garden-abraao-lucas/index.html
@@ -7,7 +7,10 @@
 	<link rel="stylesheet" media="screen" href="style.css?v=8may2013">
 	<link rel="stylesheet" href="style.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Dave Shea">
 	<meta name="description" content="A demonstration of what can be accomplished visually through CSS-based design.">
@@ -54,7 +57,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>CSS Zen Garden</h1>
+			<h1>CSS ZEN GARDEN</h1>
 			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
 		</header>
 
