--- a/css-zen-garden-abraao-lucas/index.html
+++ b/css-zen-garden-abraao-lucas/index.html
@@ -20,6 +20,16 @@
 	<!--[if lt IE 9]>
 	<script src="script/html5shiv.js"></script>
 	<![endif]-->
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-451410-1', 'auto');
+		ga('send', 'pageview');
+		</script>
+
 </head>
 
 <!--
@@ -53,54 +63,45 @@
 -->
 
 <body id="css-zen-garden">
-<div class="page-wrapper">
+<input type="radio" name="action" id="modal-close">
+<input type="radio" name="action" id="modal-top-push" class="action-hidden">
+<input type="radio" name="action" id="modal-right-push" class="action-hidden">
+<input type="radio" name="action" id="modal-top-slide" class="action-hidden">
 
-	<section class="intro" id="zen-intro">
-		<header role="banner">
-			<h1>CSS ZEN GARDEN</h1>
-			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
-		</header>
 
-		<div class="summary" id="zen-summary" role="article">
-			<p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to load it into this page.</p>
+<label for="modal-close" class="modal-overlay-close"></label>
+<div class="wrapper">
+
+			<h1 class="top-panel"><a href="/" title="Home Page">CSS ZEN GARDEN</a></h1>
+			<h4 class="top-sub-panel">The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design </h3>
+			<br>
+			<p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design.</p>
+			<p>Select any style sheet from the list to load it into this page.</p>
+			<br>
 			<p>Download the example <a href="/examples/index" title="This page's source HTML code, not to be modified.">html file</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">css file</a></p>
-		</div>
-
-		<div class="preamble" id="zen-preamble" role="article">
-			<h3>The Road to Enlightenment</h3>
+			<br>
+			<br>
+			<p>The Road to Enlightenment</p>
+			<br>
 			<p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible <abbr title="Document Object Model">DOM</abbr>s, broken <abbr title="Cascading Style Sheets">CSS</abbr> support, and abandoned browsers.</p>
-			<p>We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the <abbr title="World Wide Web Consortium">W3C</abbr>, <abbr title="Web Standards Project">WaSP</abbr>, and the major browser creators.</p>
-			<p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
-		</div>
-	</section>
+			<br>
+			<p>We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless </p>
+			<p>efforts of folk like the <abbr title="World Wide Web Consortium">W3C</abbr>, <abbr title="Web Standards Project">WaSP</abbr>, </p>
+			<p>and the major browser creators.</p>
+			<br>
+			<p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. </p>
+			<br>
+			<p>Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. </p>
+			<br>
+			<p>Become one with the web.</p>
+			<br><br>
 
-	<div class="main supporting" id="zen-supporting" role="main">
-		<div class="explanation" id="zen-explanation" role="article">
-			<h3>So What is This About?</h3>
-			<p>There is a continuing need to show the power of <abbr title="Cascading Style Sheets">CSS</abbr>. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The <abbr title="HyperText Markup Language">HTML</abbr> remains the same, the only thing that has changed is the external <abbr title="Cascading Style Sheets">CSS</abbr> file. Yes, really.</p>
-			<p><abbr title="Cascading Style Sheets">CSS</abbr> allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
-		</div>
+	<label class="action-block top-push" for="modal-top-push">Participation</label>
+	<br>
+	<label class="action-block right-push" for="modal-right-push">Benefits</label>
+	<br>
+	<label class="action-block top-slide" for="modal-top-slide">Requirements</label>
 
-		<div class="participation" id="zen-participation" role="article">
-			<h3>Participation</h3>
-			<p>Strong visual design has always been our focus. You are modifying this page, so strong <abbr title="Cascading Style Sheets">CSS</abbr> skills are necessary too, but the example files are commented well enough that even <abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as starting points. Please see the <a href="http://www.mezzoblue.com/zengarden/resources/" title="A listing of CSS-related resources"><abbr title="Cascading Style Sheets">CSS</abbr> Resource Guide</a> for advanced tutorials and tips on working with <abbr title="Cascading Style Sheets">CSS</abbr>.</p>
-			<p>You may modify the style sheet in any way you wish, but not the <abbr title="HyperText Markup Language">HTML</abbr>. This may seem daunting at first if you&#8217;ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
-			<p>Download the sample <a href="/examples/index" title="This page's source HTML code, not to be modified.">HTML</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a href="http://www.mezzoblue.com/zengarden/submit/" title="Use the contact form to send us your CSS file">Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
-		</div>
-
-		<div class="benefits" id="zen-benefits" role="article">
-			<h3>Benefits</h3>
-			<p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing <abbr title="Cascading Style Sheets">CSS</abbr> really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.</p>
-		</div>
-
-		<div class="requirements" id="zen-requirements" role="article">
-			<h3>Requirements</h3>
-			<p>Where possible, we would like to see mostly <abbr title="Cascading Style Sheets, levels 1 and 2">CSS 1 &amp; 2</abbr> usage. <abbr title="Cascading Style Sheets, levels 3 and 4">CSS 3 &amp; 4</abbr> should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical <abbr title="Cascading Style Sheets">CSS</abbr> and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your <abbr title="Cascading Style Sheets">CSS</abbr> validates.</p>
-			<p>Luckily, designing this way shows how well various browsers have implemented <abbr title="Cascading Style Sheets">CSS</abbr> by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days &#8212; especially when you factor in mobile &#8212; pixel-perfect layouts may not be possible across every platform. That&#8217;s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
-			<p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We&#8217;re well past the point of needing another garden-related design.</p>
-			<p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see <a href="http://www.mezzoblue.com/zengarden/submit/guidelines/">submission guidelines</a>), but we ask you release your <abbr title="Cascading Style Sheets">CSS</abbr> under a Creative Commons license identical to the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="View the Zen Garden's license information.">one on this site</a> so that others may learn from your work.</p>
-			<p role="contentinfo">By <a href="http://www.mezzoblue.com/">Dave Shea</a>. Bandwidth graciously donated by <a href="http://www.mediatemple.net/">mediatemple</a>. Now available: <a href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/">Zen Garden, the book</a>.</p>
-		</div>
 
 		<footer>
 			<a href="http://validator.w3.org/check/referer" title="Check the validity of this site&#8217;s HTML" class="zen-validate-html">HTML</a>
@@ -184,9 +185,72 @@
 			</div>
 		</div>
 	</aside>
-
+	<div class="footer">
+		<h5>Produzido por Abraão Lucas Silva Bento</h5>
+		<br>
+		<div class="g-plusone"></div>
+		<script type="text/javascript">
+		(function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		})();
+		</script>
+		<br>
+	</div>
 
 </div>
+
+<!--
+		<div class="main supporting" id="zen-supporting" role="main">
+		<div class="explanation" id="zen-explanation" role="article">
+			<h3>So What is This About?</h3>
+			<p>There is a continuing need to show the power of <abbr title="Cascading Style Sheets">CSS</abbr>. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The <abbr title="HyperText Markup Language">HTML</abbr> remains the same, the only thing that has changed is the external <abbr title="Cascading Style Sheets">CSS</abbr> file. Yes, really.</p>
+			<p><abbr title="Cascading Style Sheets">CSS</abbr> allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
+ 		</div>
+	-->
+
+	<div class="modal-top-push"><label for="modal-close" class="modal-close"></label>
+		<h3>Strong visual design has always been our focus. You are modifying this page, so strong <abbr title="Cascading Style Sheets">CSS</abbr> 
+			skills are necessary too, but the example files are commented well enough that even <abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as starting points. 
+			Please see the <a href="http://www.mezzoblue.com/zengarden/resources/" title="A listing of CSS-related resources"><abbr title="Cascading Style Sheets">CSS</abbr> 
+			Resource Guide</a> for advanced tutorials and tips on working with <abbr title="Cascading Style Sheets">CSS</abbr>.
+			You may modify the style sheet in any way you wish, but not the <abbr title="HyperText Markup Language">HTML</abbr>. 
+			This may seem daunting at first if you&#8217;ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.
+			Download the sample <a href="/examples/index" title="This page's source HTML code, not to be modified.">
+			HTML</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. 
+			Once you have completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. 
+			<a href="http://www.mezzoblue.com/zengarden/submit/" title="Use the contact form to send us your CSS file">
+			Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.
+		</h1>
+	</div>
+	
+	<div class="modal-top-slide"><label for="modal-close" class="modal-close"></label>
+		<h3>
+		Where possible, we would like to see mostly <abbr title="Cascading Style Sheets, levels 1 and 2">
+		CSS 1 &amp; 2</abbr> usage. <abbr title="Cascading Style Sheets, levels 3 and 4">CSS 3 &amp; 4</abbr> should be limited to widely-supported
+		elements only, or strong fallbacks should be provided. 
+		The CSS Zen Garden is about functional, practical <abbr title="Cascading Style Sheets">CSS</abbr> 
+		and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real 
+		requirement we have is that your <abbr title="Cascading Style Sheets">CSS</abbr> validates.
+		Luckily, designing this way shows how well various browsers have implemented <abbr title="Cascading Style Sheets">
+		CSS</abbr> by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. 
+		Due to the sheer number of user agents on the web these days &#8212; especially when you factor in 
+		mobile &#8212; pixel-perfect layouts may not be possible across every platform. That&#8217;s okay, 
+		but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, 
+		iOS and Android browsers (run by over 90% of the population).
+		</h1>
+	</div>
+	
+	<div class="modal-right-push"><label for="modal-close" class="modal-close"></label>
+		<h3>
+		Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing 
+		<abbr title="Cascading Style Sheets">CSS</abbr> really can be. This site serves as equal parts inspiration for 
+		those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques 
+		we can all look forward to.
+		</h1>
+
+	</div>
 
 <!--
 
@@ -197,6 +261,15 @@
 -->
 <div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
 <div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div>
+
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-451410-1', 'auto');
+	ga('send', 'pageview');
+</script>
 
 </body>
 </html>
